added Apis annotations in handlers
