# Todo/src/pkg/handler/auth.go
@@ -15,9 +15,11 @@ import (
 //	@Produce		json
 //	@Param			payload	body		todoapp.User	true	"account info"
 //	@Success		200		{integer}	integer			1
+//
 // Failure default {object} errorResponse
 // Failure 400,404 {object} errorResponse
 // Failure 500 {object} errorResponse
+//
 //	@Router			/auth/sign-up [post]
 func (h *Handler) signUp(c *gin.Context) {
 	var (
@@ -40,25 +42,22 @@ func (h *Handler) signUp(c *gin.Context) {
 	})
 }
 
-type signInInput struct {
-	Username string `json:"username" binding:"required"`
-	Password string `json:"password" binding:"required"`
-}
-
 //	@Tags			auth
 //	@Summary		sign in
 //	@Description	logging in the user
 //	@Accept			json
 //	@Produce		json
-//	@Param			payload	body		signInInput	true	"username password"
+//	@Param			payload	body		todoapp.SignInInput	true	"username password"
 //	@Success		200		{string}	string		token	"someToken"
+//
 // Failure default {object} errorResponse
 // Failure 400,404 {object} errorResponse
 // Failure 500 {object} errorResponse
+//
 //	@Router			/auth/sign-in [post]
 func (h *Handler) signIn(c *gin.Context) {
 	var (
-		input signInInput
+		input todoapp.SignInInput
 		token string
 		err   error
 	)
