# Todo/src/pkg/handler/item.go
@@ -16,14 +16,14 @@ import (
 //	@Produce		json
 //	@param			Authorization	header		string				true	"Bearer Auth, pls add bearer before"
 //	@Param			payload			body		todoapp.TodoItem	true	"item info"
-//	@Param			id				path		int					true	"id"
+//	@Param			list_id				path		int					true	"list_id"
 //	@Success		201				{string}	string				"id"
 //
 // Failure default {object} errorResponse
 // Failure 400,404 {object} errorResponse
 // Failure 500 {object} errorResponse
 //
-//	@Router			/api/lists/{id}/items [post]
+//	@Router			/api/lists/{list_id}/items [post]
 func (h *Handler) createItem(c *gin.Context) {
 	userID, err := getUserID(c)
 	if err != nil {
@@ -53,25 +53,20 @@ func (h *Handler) createItem(c *gin.Context) {
 	})
 }
 
-type getAllItemsResponse struct {
-	Data []todoapp.TodoItem
-}
-
 //	@Tags			items
 //	@Summary		Get all items
-//	@Description	Get all items from the list of current user
+//	@Description	Get all items from the given list of current user
 //	@Accept			json
 //	@Produce		json
 //	@param			Authorization	header		string				true	"Bearer Auth, pls add bearer before"
-//	@Param			payload			body		todoapp.TodoItem	true	"item info"
-//	@Param			id				path		int					true	"id"
-//	@Success		201				{string}	string				"id"
+//	@Param			list_id		    path		int					true	"list_id"
+//	@Success		200				{onject}    todoapp.GetAllItemsResponse
 //
 // Failure default {object} errorResponse
 // Failure 400,404 {object} errorResponse
 // Failure 500 {object} errorResponse
 //
-//	@Router			/api/lists/:id/items [post]
+//	@Router			/api/lists/{list_id}/items [get]
 func (h *Handler) getAllItem(c *gin.Context) {
 	userID, err := getUserID(c)
 	if err != nil {
@@ -90,26 +85,25 @@ func (h *Handler) getAllItem(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, getAllItemsResponse{
+	c.JSON(http.StatusOK, todoapp.GetAllItemsResponse{
 		Data: items,
 	})
 }
 
 //	@Tags			items
 //	@Summary		Get item by Id
-//	@Description	Get items Id for current user
+//	@Description	Get item by specific id for current user
 //	@Accept			json
 //	@Produce		json
 //	@param			Authorization	header		string				true	"Bearer Auth, pls add bearer before"
-//	@Param			payload			body		todoapp.TodoItem	true	"item info"
 //	@Param			id				path		int					true	"id"
-//	@Success		201				{string}	string				"id"
+//	@Success		200				{object}	todoapp.TodoItem
 //
 // Failure default {object} errorResponse
 // Failure 400,404 {object} errorResponse
 // Failure 500 	   {object} errorResponse
 //
-//	@Router			/api/items/:id [get]
+//	@Router			/api/items/{id} [get]
 func (h *Handler) getItemByID(c *gin.Context) {
 	userID, err := getUserID(c)
 	if err != nil {
@@ -131,6 +125,21 @@ func (h *Handler) getItemByID(c *gin.Context) {
 	c.JSON(http.StatusOK, item)
 }
 
+//	@Tags			items
+//	@Summary		Update an Item
+//	@Description	Updating an item by a its id for current user
+//	@Accept			json
+//	@Produce		json
+//	@param			Authorization	header		string				true	"Bearer Auth, pls add bearer before"
+//	@Param			payload			body		todoapp.UpdateItemInput	true	" update item info"
+//	@Param			item_id			path		int					true	"item_id"
+//	@Success		200				{string}	string				"status"
+//
+// Failure default {object} errorResponse
+// Failure 400,404 {object} errorResponse
+// Failure 500 {object} errorResponse
+//
+//	@Router			/api/items/{id} [put]
 func (h *Handler) updateItem(c *gin.Context) {
 	var (
 		userID, itemID int
@@ -165,6 +174,20 @@ func (h *Handler) updateItem(c *gin.Context) {
 	})
 }
 
+//	@Tags			items
+//	@Summary		Delete an Item
+//	@Description	Deleting an item by a its id for current user
+//	@Accept			json
+//	@Produce		json
+//	@param			Authorization	header		string				true	"Bearer Auth, pls add bearer before"
+//	@Param			item_id			path		int					true	"item_id"
+//	@Success		200				{string}	string				"status"
+//
+// Failure default {object} errorResponse
+// Failure 400,404 {object} errorResponse
+// Failure 500 {object} errorResponse
+//
+//	@Router			/api/items/{id} [delete]
 func (h *Handler) deleteItem(c *gin.Context) {
 	var (
 		userID, itemID int
